[Free Draw] Text Buttons to Icons

--- a/freeDraw.html
+++ b/freeDraw.html
@@ -23,12 +23,12 @@
 <body>
   
   <div class="navbar">
-    <button data-action="home">Home</button>
-    <button data-action="undo">Undo</button>
-    <button data-action="size-increase"><b>+</b></button>
-    <button data-action="size-decrease"><b>-</b></button>
+    <button data-action="home"><img src="./assets/home.png" alt="Home" /></button>
+    <button data-action="undo"><img src="./assets/undo.png" alt="Undo" /></button>
+    <button data-action="size-increase"><img src="./assets/increase.png" alt="Increase" /></button>
+    <button data-action="size-decrease"><img src="./assets/decrease.png" alt="Decrease" /></button>
     <button data-action="color-cycle" class="color-button"></button>
-    <button data-action="clearAll">Clear</button>
+    <button data-action="clearAll"><img src="./assets/trash.png" alt="Clear" /></button>
   </div>
 
   <!-- MediaPipe video input (visible!) -->
