--- a/freeDraw.html
+++ b/freeDraw.html
@@ -33,7 +33,7 @@
   </div>
 
     <div id="menu">
-      <div id="info-guide">
+      <div id="info-guide" style="top: 50%;">
         <h3 style="text-align: center;">[ Welcome to HAtelier! ]</h3>
         <h3 style="text-align: center;">INSTRUCTION:<br></h3>
         <ul>
